--- a/index.html
+++ b/index.html
@@ -1,17 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <title>Ad&aacute;n Garc&iacute;a - Software Developer</title>
+    <meta name="description" content="@adgarboc. I'm programmer, beginner in Minecraft and default in fornite [sic]. I love programming computers and exploring new technologies." />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="keywords" content="adgarboc, adan, garcia"/>
+    <meta name="author" content="Adán García" />
+    <meta name="copyright" content="@adgarboc" />
+    <meta name="robots" content="index,follow"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
-  <main>
-    <h1>Azure Class MX</h1>
-  </main>
+    <div class="btnChanger">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
+    </div>
+
+    <div class="about">
+        <img class="me" src="https://s.gravatar.com/avatar/bb55c6f0b626a6060cd0068fe3ff85e9?s=512" alt="" />
+            <ul class="social">
+                <li>
+                    <a class="zelda" title="Mi curr&iacute;culum" href="/about">
+                        <i class="fas fa-address-card" ></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" title="Mi Linkedin" href="https://linkedin.com/in/adgarboc" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" title="Mis proyectos" href="https://github.com/adgarboc" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" title="Lo que estoy aprendiendo" href="https://platzi.com/@adgarboc" target="_blank">
+                        <i class="fas fa-graduation-cap"></i>
+                    </a>
+                </li>
+                <!-- <li>
+                    <a class="zelda" href="https://medium.com/@adgarboc" target="_blank">
+                        <i class="fab fa-medium"></i>
+                    </a>
+                </li> -->
+                <li>
+                    <a class="zelda" title="Escr&iacute;beme un correo" href="mailto:adgarboc@gmail.com" target="_blank">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" title="Mi Twitter" href="https://twitter.com/adgarboc" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" title="Mi Instagram" href="https://instagram.com/adgarboc" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+                <!-- <li>
+                    <a class="zelda" href="https://discord.gg/XUb679" target="_blank">
+                        <i class="fab fa-discord"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" href="https://twitch.tv/adgarboc" target="_blank">
+                        <i class="fab fa-twitch"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="zelda" href="https://patreon.com/adgarboc" target="_blank">
+                        <i class="fab fa-patreon"></i>
+                    </a>
+                </li> -->
+            </ul>
+    </div>
+    <div class="floating-text">
+        Made with <i class="fa fa-heart"></i> by <a href="#">&commat;adgarboc</a>
+    </div>
+    <script src="js/core.js"></script>
 </body>
 
 </html>
